syntax = "proto3";
option java_package = "com.FTEmulator.auth.grpc";

service Auth {
    rpc AuthStatus (AuthStatusRequest) returns (AuthStatusResponse);
}

message AuthStatusRequest {}

message AuthStatusResponse {
    bool ok = 1;
}